Fixed close button spacing

--- a/src/components/InfoBar/InfoBar.css
+++ b/src/components/InfoBar/InfoBar.css
@@ -26,3 +26,7 @@
 .onlineIcon {
   margin-right: 5%;
 }
+
+.closeIcon {
+  margin-right: 10px;
+}
